# jobqueue-monitor-slurm-client

./: .pre-commit-config.yaml  LICENSE  pixi.toml  pyproject.toml
ci/requirements/: docs.txt  docs.yaml  environment.yaml  requirements.txt
design_documents/: draft.org
docs/: conf.py
slurm_client/: __init__.py  __main__.py  app.py  app.tcss  config.py  errors.py  main.py  messages.py  types.py
slurm_client/rest_api/: __init__.py  api_version.py  connection.py  errors.py  jobs.py  nodes.py  parsers.py  partitions.py  ping.py  request.py  resources.py  table_message.py  token.py
slurm_client/screens/: error.py  error.tcss  jobs.py  jobs.tcss  main.py  nodes.py  nodes.tcss  partitions.py  partitions.tcss  sort.py  sort.tcss
slurm_client/tests/: test_nodes.py
slurm_client/tests/rest_api/: test_api_version.py  test_nodes.py  test_request.py  test_resources.py  test_token.py
slurm_client/tests/rest_api/responses/: nodes.json
slurm_client/widgets/: footer.py  kvgrid.py  resource.py  table.py
